--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         run: mvn clean verify --file simpleapi
 
       - name: Sonar Test
-        run: mvn -B verify sonar:sonar -sonar.projectBaseDir=simpleapi -Dsonar.projectKey=PierreJovetic_DEVOPS-TP2 -Dsonar.organization=pierrejovetic -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}  --file simpleapi
+        run: mvn -B verify sonar:sonar -Dsonar.projectBaseDir=simpleapi -Dsonar.projectKey=PierreJovetic_DEVOPS-TP2 -Dsonar.organization=pierrejovetic -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}  --file simpleapi
 
 
   # define job to build and publish docker image
